--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+lto = true
+opt-level = "z"
+panic = "abort"
+
 [dependencies]
 tracing = "0.1"
 tracing-subscriber = "0.3"
@@ -17,7 +22,6 @@ once_cell = "1.19"
 toml = "0.8.19"
 chrono = "0.4.38"
 dashmap = "6.0.1"
-hound = "3.5.1"
 anyhow = "1.0.82"
 
 [dependencies.poise]
