--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,32 +13,34 @@ panic = "abort"
 [dependencies]
 tracing = "0.1"
 tracing-subscriber = "0.3"
-serde_json = "1.0.138"
-serde = "1.0.217"
+serde_json = "1.0.140"
+serde = "1.0.218"
 futures = "0.3"
 reqwest = { version = "0.12.12", features = ["json", "blocking"]}
-log = "0.4.25"
-once_cell = "1.20.2"
-toml = "0.8.19"
-chrono = "0.4.39"
+log = "0.4.26"
+once_cell = "1.20.3"
+toml = "0.8.20"
+chrono = "0.4.40"
 dashmap = "6.1.0"
-anyhow = "1.0.95"
+anyhow = "1.0.97"
+eframe = "0.31.1"
+egui = "0.31.1"
 
 [dependencies.poise]
-version = "0.6"
+version = "0.6.1"
 default-features = false
-features = ["cache", "chrono", "handle_panics",]
+features = ["cache", "chrono", "handle_panics", "collector"]
 
 [dependencies.songbird]
-version = "0.4.6"
+version = "0.5.0"
 default-features = false
-features = ["gateway", "serenity", "native", "driver", "receive"]
+features = ["gateway", "serenity", "native", "driver", "receive", "tungstenite"]
 
 [dependencies.symphonia]
 version = "0.5.4"
 
 [dependencies.tokio]
-version = "1.43.0"
+version = "1.44.0"
 features = ["rt-multi-thread", "macros"]
 
 [dependencies.lavalink-rs]
