--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,17 +14,18 @@ panic = "abort"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 serde_json = "1.0.140"
-serde = "1.0.218"
+serde = "1.0.219"
 futures = "0.3"
-reqwest = { version = "0.12.12", features = ["json", "blocking"]}
+reqwest = { version = "0.12.14", features = ["json", "blocking"]}
 log = "0.4.26"
-once_cell = "1.20.3"
+once_cell = "1.21.1"
 toml = "0.8.20"
 chrono = "0.4.40"
 dashmap = "6.1.0"
 anyhow = "1.0.97"
 eframe = "0.31.1"
 egui = "0.31.1"
+rand = "0.9.0"
 
 [dependencies.poise]
 version = "0.6.1"
@@ -40,7 +41,7 @@ features = ["gateway", "serenity", "native", "driver", "receive", "tungstenite"]
 version = "0.5.4"
 
 [dependencies.tokio]
-version = "1.44.0"
+version = "1.44.1"
 features = ["rt-multi-thread", "macros"]
 
 [dependencies.lavalink-rs]
