--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,9 @@ tracing-subscriber = "0.3"
 serde_json = "1.0.140"
 serde = "1.0.219"
 futures = "0.3"
-reqwest = { version = "0.12.14", features = ["json", "blocking"]}
-log = "0.4.26"
-once_cell = "1.21.1"
+reqwest = { version = "0.12.15", features = ["json", "blocking"]}
+log = "0.4.27"
+once_cell = "1.21.2"
 toml = "0.8.20"
 chrono = "0.4.40"
 dashmap = "6.1.0"
@@ -26,6 +26,8 @@ anyhow = "1.0.97"
 eframe = "0.31.1"
 egui = "0.31.1"
 rand = "0.9.0"
+axum = "0.8.1"
+tower-http = "0.6.2"
 
 [dependencies.poise]
 version = "0.6.1"
